fixed bug of search input in dark mode

--- a/news website/styles.css
+++ b/news website/styles.css
@@ -123,6 +123,7 @@ p{
 }
 
 .search-input{
+    color: var(--dark-text-color);
     height: 100%;
     width: 20rem;
     padding-inline: 0.5rem;
